--- a/IconFontDemo/IconFontDemo/IconFontDemo.csproj
+++ b/IconFontDemo/IconFontDemo/IconFontDemo.csproj
@@ -11,11 +11,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Fonts\Font-Awesome-5-Brands-Regular-400.otf" />
+    <None Remove="Fonts\Font-Awesome-5-Free-Regular-400.otf" />
+    <None Remove="Fonts\Font-Awesome-5-Free-Solid-900.otf" />
     <None Remove="Fonts\materialdesignicons-webfont.ttf" />
     <None Remove="Fonts\Samantha.ttf" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Fonts\Font-Awesome-5-Brands-Regular-400.otf" />
+    <EmbeddedResource Include="Fonts\Font-Awesome-5-Free-Regular-400.otf" />
+    <EmbeddedResource Include="Fonts\Font-Awesome-5-Free-Solid-900.otf" />
     <EmbeddedResource Include="Fonts\materialdesignicons-webfont.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
